Add compatibility with Minecraft 1.16.* and 1.17.*
Put Java 1.8 in the main module for Minecraft 1.16.* which requires this version.